Cuarto commit. Agregando nombre estudiante.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Github Workshop</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1></h1>
+    <h1>Nombre del estudiante:</h1>
+    <p>Leandro Lambraño</p>
 </body>
 </html>
