--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <title>Github Workshop</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>Nombre del estudiante:</h1>
-    <p>Leandro Lambraño</p>
+    <div class="container">
+        <div id="top-left">
+            <h2>Nombre del estudiante:</h2>
+            <p>Leandro Lambraño</p>
+            <h2>Semestre cursado:</h2>
+            <p>5!</p>
+        </div>
+        <div id="top-right">
+            <h2>Hobbies:</h2>
+            <p>Pasatiempos preferidos por el estudiante:</p>
+            <ul>
+                <span class="hobbies">
+                    <i>1. Jugar fútbol</i>
+                    <i>2. Ir al estadio</i>
+                    <i>3. Conducir mi motocicleta</i>
+                    <i>4. Pasear a mi perro</i> 
+                    <i>5. Escuchar música</i>
+                </span>
+            </ul>
+        </div>
+    </div>
+    
 </body>
 </html>
