Noveno commit. Agregando images a mostrar

--- a/index.html
+++ b/index.html
@@ -17,17 +17,33 @@
         <div id="top-right">
             <h2>Hobbies:</h2>
             <p>Pasatiempos preferidos por el estudiante:</p>
-            <ul>
-                <span class="hobbies">
+            <ul class="hobbies">
                     <i>1. Jugar fútbol</i>
                     <i>2. Ir al estadio</i>
                     <i>3. Conducir mi motocicleta</i>
                     <i>4. Pasear a mi perro</i> 
                     <i>5. Escuchar música</i>
-                </span>
             </ul>
         </div>
     </div>
-    
+    <div class="container2">
+        <div>
+            <h2>Series favoritas</h2>
+            <ul class="series">
+                <span>
+                    <i>1. Peaky blinders</i>
+                    <i>2. The Sopranos</i>
+                    <i>3. Suits</i>
+                    <i>4. Mad Men</i>
+                </span>
+            </ul>
+        </div>
+        <div class="image-container">
+            
+        </div>
+    </div>
+    <footer>
+        <h2></h2>
+    </footer>
 </body>
 </html>
