--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Series favoritas</h2>
             <ul class="series">
                 <span>
-                    <i>1. Peaky blinders</i>
+                    <i>1. Peaky Blinders</i>
                     <i>2. The Sopranos</i>
                     <i>3. Suits</i>
                     <i>4. Mad Men</i>
@@ -39,7 +39,8 @@
             </ul>
         </div>
         <div class="image-container">
-            
+            <img src="images/mm.jpg" alt="Mad Men poster">
+            <img src="images/pb.jpg" alt="Peaky Blinders poster">
         </div>
     </div>
     <footer>
