--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="image-container">
             <img src="images/mm.jpg" alt="Mad Men poster">
             <img src="images/pb.jpg" alt="Peaky Blinders poster">
+            <img src="images/sop.jpg" alt="The Sopranos poster">
         </div>
     </div>
     <footer>
