adding id to specific image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="image-container">
-            <img src="images/mm.jpg" alt="Mad Men poster">
+            <img src="images/mm.jpg" alt="Mad Men poster" id="mm">
             <img src="images/pb.jpg" alt="Peaky Blinders poster">
             <img src="images/sop.jpg" alt="The Sopranos poster">
         </div>
